--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -102,10 +102,10 @@ jobs:
             target: x86_64-unknown-linux-gnu
             architecture: x64
             libc: glibc
-          - os: windows-latest
-            platform: windows
-            target: x86_64-pc-windows-msvc
-            architecture: x64
+          # - os: windows-latest
+          #   platform: windows
+          #   target: x86_64-pc-windows-msvc
+          #   architecture: x64
           - os: macos-latest
             platform: darwin
             target: x86_64-apple-darwin
@@ -306,13 +306,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           persist-credentials: false
-
-      - name: Checkout tag
-        if: needs.get_release_info.outputs.tag != ''
-        uses: actions/checkout@v4
-        with:
-          persist-credentials: false
-          ref: v${{ needs.get_release_info.outputs.tag }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
