require get_release_info for release

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -291,6 +291,7 @@ jobs:
     needs:
       - test
       - dist_chainhook
+      - get_release_info
     permissions:
       actions: write
       contents: write
