--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -344,7 +344,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           persist-credentials: false
-          ref: v${{ needs.get_release_info.outputs.tag }}
+          ref: ${{ needs.get_release_info.outputs.tag }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
