--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -419,8 +419,10 @@ jobs:
 
   auto-approve-dev:
     runs-on: ubuntu-latest
-    if: needs.build-publish.outputs.new_release_published == 'true' && (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository)
-    needs: build-publish
+    if: startsWith(github.ref, 'refs/heads/main') && needs.get_release_info.outputs.tag != '' && (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository)
+    needs: 
+      - build-publish
+      - get_release_info
     steps:
       - name: Approve pending deployments
         run: |
@@ -461,10 +463,11 @@ jobs:
 
   auto-approve-stg:
     runs-on: ubuntu-latest
-    if: needs.build-publish.outputs.new_release_published == 'true' && (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository)
+    if: startsWith(github.ref, 'refs/heads/main') && needs.get_release_info.outputs.tag != '' && (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository)
     needs:
       - build-publish
       - deploy-dev
+      - get_release_info
     steps:
       - name: Approve pending deployments
         run: |
@@ -482,7 +485,8 @@ jobs:
     needs:
       - build-publish
       - deploy-staging
-    if: needs.build-publish.outputs.new_release_published == 'true' && (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository)
+      - get_release_info
+    if: startsWith(github.ref, 'refs/heads/main') && needs.get_release_info.outputs.tag != '' && (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository)
     env:
       DEPLOY_ENV: prd
     environment:
