fix getting version from workflow dispatch

--- a/.github/workflows/pkg-version-bump.yaml
+++ b/.github/workflows/pkg-version-bump.yaml
@@ -18,9 +18,19 @@ jobs:
     name: Publish to Winget via Komac
     runs-on: windows-latest
     steps:
-      - name: Winget version bump
+      - name: Get Version
+        env:
+          TAG: ${{ github.event.client_payload.tag || github.event.inputs.tag }}
+        id: get-version
+        run: |
+          # Get version info
+          VERSION=$(echo "${TAG#v}")
+          # Pipe to step output
+          "version=VERSION" >> $env:GITHUB_OUTPUT
+      - name: Winget version bump        
         uses: vedantmgoyal2009/winget-releaser@v2
         with:
           identifier: HiroSystems.Chainhook
+          version: ${{ steps.get-version.outputs.version }} # use version from previous step output
           max-versions-to-keep: 5 # keep only latest 5 versions
           token: ${{ secrets.GH_TOKEN }}
