--- a/components/chainhook-sdk/Cargo.toml
+++ b/components/chainhook-sdk/Cargo.toml
@@ -42,6 +42,7 @@ miniscript = "11.0.0"
 prometheus = "0.13.3"
 
 chainhook-types = { path = "../chainhook-types-rs" }
+serde_regex = "1.1.0"
 
 [dev-dependencies]
 test-case = "3.1.0"
