--- a/components/chainhook-sdk/Cargo.toml
+++ b/components/chainhook-sdk/Cargo.toml
@@ -13,6 +13,10 @@ serde_json = { version = "1", features = ["arbitrary_precision"] }
 serde-hex = "0.1.0"
 serde_derive = "1"
 stacks-codec = "2.4.1"
+clarity = { git = "https://github.com/stacks-network/stacks-core.git", branch = "feat/clarity-wasm-develop", package = "clarity", default-features = false, features = [
+    "canonical",
+    "log",
+] }
 hiro-system-kit = { version = "0.3.4", optional = true }
 chainhook-types = { version = "1.3.6", path = "../chainhook-types-rs" }
 rocket = { version = "=0.5.0", features = ["json"] }
