--- a/.releaserc
+++ b/.releaserc
@@ -15,8 +15,23 @@
         "preset": "conventionalcommits"
       }
     ],
+    [
+      "@semantic-release/exec",
+      {
+        "prepareCmd": "sed -i -e '1h;2,$H;$!d;g' -e 's@name = \"chainhook\"\\nversion = \"[^\"]*\"@name = \"chainhook\"\\nversion = \"${nextRelease.version}\"@g' Cargo.toml Cargo.lock"
+      }
+    ],
     "@semantic-release/github",
     "@semantic-release/changelog",
-    "@semantic-release/git"
+    [
+      "@semantic-release/git",
+      {
+        "assets": [
+          "CHANGELOG.md",
+          "components/chainhook-cli/Cargo.toml",
+          "components/chainhook-cli/Cargo.lock"
+        ]
+      }
+    ]
   ]
 }
