--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,6 +17,13 @@ concurrency:
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        suite: [cli, sdk]
+    defaults:
+      run:
+        working-directory: ./components/chainhook-${{ matrix.suite }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -29,6 +36,7 @@ jobs:
           echo "RUST_VERSION_HASH=$(rustc --version | sha256sum | awk '{print $1}')" >> $GITHUB_ENV
 
       - name: Install redis
+        if: matrix.suite == 'chainhook'
         run: sudo apt-get install -y redis-server
 
       - name: Cache cargo
@@ -45,9 +53,12 @@ jobs:
             target/
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
-      - name: Install and run cargo-tarpaulin
+      - name: Install cargo-tarpaulin
         run: |
           cargo install cargo-tarpaulin
+
+      - name: Run tests
+        run: |
           cargo tarpaulin --skip-clean --out lcov --features redis_tests -- --test-threads=1
 
       - name: Upload coverage reports to Codecov
