--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ components/chainhook-types-js/dist
 *.rdb
 *.redb
 cache/
+Chainhook.toml
 
 components/chainhook-cli/src/service/tests/fixtures/tmp
 components/chainhook-cli/src/archive/tests/fixtures/tmp
