--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,7 +36,7 @@ jobs:
           echo "RUST_VERSION_HASH=$(rustc --version | sha256sum | awk '{print $1}')" >> $GITHUB_ENV
 
       - name: Install redis
-        if: matrix.suite == 'chainhook'
+        if: matrix.suite == 'cli'
         run: sudo apt-get install -y redis-server
 
       - name: Cache cargo
