--- a/components/chainhook-cli/Cargo.toml
+++ b/components/chainhook-cli/Cargo.toml
@@ -16,7 +16,7 @@ serde-redis = "0.12.0"
 hex = "0.4.3"
 rand = "0.8.5"
 chainhook-sdk = { version = "0.12.6", default-features = false, features = [
-    "zeromq",
+    "zeromq", "stacks-signers"
 ], path = "../chainhook-sdk" }
 hiro-system-kit = "0.3.4"
 # hiro-system-kit = { path = "../../../clarinet/components/hiro-system-kit" }
