--- a/components/chainhook-sdk/Cargo.toml
+++ b/components/chainhook-sdk/Cargo.toml
@@ -52,5 +52,6 @@ test-case = "3.1.0"
 [features]
 default = ["hiro-system-kit/log"]
 zeromq = ["zmq"]
+stacks-signers = []
 debug = ["hiro-system-kit/debug"]
 release = ["hiro-system-kit/release_debug", "hiro-system-kit/full_log_level_prefix"]
