--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,12 +35,6 @@ jobs:
           rustup toolchain install stable --profile minimal
           echo "RUST_VERSION_HASH=$(rustc --version | sha256sum | awk '{print $1}')" >> $GITHUB_ENV
 
-      - name: Install redis
-        if: matrix.suite == 'cli'
-        run: |
-          sudo apt-get install -y redis-server
-          echo "TARPAULIN_FLAGS=--features redis_tests" >> $GITHUB_ENV
-
       - name: Cache cargo
         uses: actions/cache@v4
         with:
@@ -59,6 +53,13 @@ jobs:
         run: |
           cargo install cargo-tarpaulin
 
+      - name: Setup integration environment
+        run: |
+          sudo ufw disable
+          docker-compose -f ../dockerfiles/docker-compose.dev.yml up -d
+          docker-compose -f ../dockerfiles/docker-compose.dev.yml logs -t -f --no-color &> docker-compose-logs.txt &
+        if: matrix.suite == 'cli'
+  
       - name: Run tests
         run: |
           cargo tarpaulin --skip-clean --out lcov ${{ env.TARPAULIN_FLAGS }} -- --test-threads=1
@@ -68,6 +69,14 @@ jobs:
         env:
           token: ${{ secrets.CODECOV_TOKEN }}
           codecov_yml_path: .github/codecov.yml
+
+      - name: Print integration environment logs
+        run: cat docker-compose-logs.txt
+        if: matrix.suite == 'cli' && failure()
+
+      - name: Teardown integration environment
+        run: docker-compose -f ../dockerfiles/docker-compose.dev.yml down -v -t 0
+        if: matrix.suite == 'cli' && always()
 
   distributions:
     runs-on: ${{ matrix.os }}
