--- a/components/chainhook-sdk/Cargo.toml
+++ b/components/chainhook-sdk/Cargo.toml
@@ -47,6 +47,7 @@ prometheus = "0.13.3"
 chainhook-types = { path = "../chainhook-types-rs" }
 
 [dev-dependencies]
+assert-json-diff = "2.0.2"
 test-case = "3.1.0"
 
 [features]
