--- a/components/chainhook-cli/Cargo.toml
+++ b/components/chainhook-cli/Cargo.toml
@@ -31,6 +31,8 @@ reqwest = { version = "0.12", default-features = false, features = [
     "rustls-tls",
 ] }
 tokio = { version = "1.38.1", features = ["full"] }
+rusqlite = { version = "0.31.0", features = ["bundled"] }
+slog = { version = "2.7.0" }
 futures-util = "0.3.24"
 flate2 = "1.0.24"
 tar = "0.4.38"
@@ -62,6 +64,7 @@ cli = ["clap", "clap_generate", "toml", "ctrlc"]
 debug = ["chainhook-sdk/debug"]
 release = ["chainhook-sdk/release"]
 redis_tests = []
+stacks-signers = []
 
 # [patch.crates-io]
 # raft-proto = { git = "https://github.com/tikv/raft-rs", rev="95c532612ee6a83591fce9a8b51d6afe87b58835"}
