--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - main
+      - beta
       - develop
+      - stacks-signers
     paths-ignore:
       - '**/CHANGELOG.md'
   pull_request:
