--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -285,6 +285,7 @@ jobs:
       - distributions
     outputs:
       new_release_version: ${{ steps.semantic.outputs.new_release_version }}
+      new_release_git_tag: ${{ steps.semantic.outputs.new_release_git_tag }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -340,7 +341,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           persist-credentials: false
-          ref: ${{ needs.semantic-release.outputs.new_release_version }}
+          ref: ${{ needs.semantic-release.outputs.new_release_git_tag }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
