ci: disable windows build

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -96,10 +96,10 @@ jobs:
             target: x86_64-unknown-linux-gnu
             architecture: x64
             libc: glibc
-          - os: windows-latest
-            platform: windows
-            target: x86_64-pc-windows-msvc
-            architecture: x64
+          # - os: windows-latest
+          #   platform: windows
+          #   target: x86_64-pc-windows-msvc
+          #   architecture: x64
           - os: macos-latest
             platform: darwin
             target: x86_64-apple-darwin
